Jhonny/Prac_2/parser.output
Terminales no usados en la gramática

    TK_PR_DE
    TK_PR_ABRIRLLAVE
    TK_PR_CERRARLLAVE
    TK_LETRA
    TK_CIFRA
    TK_DELIM
    TK_LETRA_O_CIFRA


Estado 90 conflictos: 2 desplazamiento/reducción
Estado 137 conflictos: 6 desplazamiento/reducción
Estado 138 conflictos: 2 desplazamiento/reducción, 6 reducción/reducción
Estado 164 conflictos: 1 desplazamiento/reducción
Estado 173 conflictos: 3 desplazamiento/reducción
Estado 176 conflictos: 3 desplazamiento/reducción
Estado 195 conflictos: 6 desplazamiento/reducción
Estado 196 conflictos: 6 desplazamiento/reducción
Estado 197 conflictos: 6 desplazamiento/reducción
Estado 198 conflictos: 6 desplazamiento/reducción
Estado 199 conflictos: 6 desplazamiento/reducción
Estado 200 conflictos: 6 desplazamiento/reducción
Estado 201 conflictos: 6 desplazamiento/reducción
Estado 202 conflictos: 6 desplazamiento/reducción
Estado 203 conflictos: 6 desplazamiento/reducción
Estado 204 conflictos: 6 desplazamiento/reducción
Estado 205 conflictos: 6 desplazamiento/reducción
Estado 206 conflictos: 6 desplazamiento/reducción
Estado 207 conflictos: 2 desplazamiento/reducción, 6 reducción/reducción
Estado 208 conflictos: 2 desplazamiento/reducción, 6 reducción/reducción


Gramática

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_OTHER TK_PR_SECUEN cabecera_alg bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal TK_LIT_COMENTARIO

    3 bloque_alg: bloque TK_LIT_COMENTARIO

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_cte decl_globales
    6              | %empty

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_cte declaraciones
   13              | declaracion_var declaraciones
   14              | %empty

   15 declaracion_tipo: TK_PR_TIPO lista_d_tipo TK_PR_FTIPO TK_PR_SECUEN

   16 declaracion_cte: TK_PR_CONST lista_d_cte TK_PR_FCONST TK_PR_SECUEN

   17 declaracion_var: TK_PR_VAR lista_d_var TK_PR_FVAR TK_PR_SECUEN

   18 lista_d_tipo: TK_ID_OTHER TK_PR_IGUAL d_tipo TK_PR_SECUEN lista_d_tipo
   19             | %empty

   20 d_tipo: TK_PR_TUPLA lista_campos TK_PR_FTUPLA
   21       | TK_PR_TABLA TK_PR_INIARRA expresion_t TK_PR_SUBRANGO expresion_t
   22       | TK_ID_OTHER
   23       | expresion_t TK_PR_SUBRANGO expresion_t
   24       | TK_PR_REF d_tipo
   25       | TK_PR_ENTERO
   26       | TK_PR_BOOL
   27       | TK_PR_CHAR
   28       | TK_PR_REAL
   29       | TK_PR_CADENA

   30 expresion_t: expresion
   31            | TK_LIT_CARAC

   32 lista_campos: TK_ID_OTHER TK_PR_IGUAL d_tipo TK_PR_SECUEN lista_campos
   33             | %empty

   34 lista_d_cte: TK_ID_OTHER TK_PR_IGUAL TK_LIT_BOOL TK_PR_SECUEN lista_d_cte
   35            | TK_ID_OTHER TK_PR_IGUAL TK_LIT_CADE TK_PR_SECUEN lista_d_cte
   36            | TK_ID_OTHER TK_PR_IGUAL TK_LIT_CARAC TK_PR_SECUEN lista_d_cte
   37            | TK_ID_OTHER TK_PR_IGUAL TK_LIT_COMENTARIO TK_PR_SECUEN lista_d_cte
   38            | TK_ID_OTHER TK_PR_IGUAL TK_LIT_ENTERO TK_PR_SECUEN lista_d_cte
   39            | TK_ID_OTHER TK_PR_IGUAL TK_LIT_REAL TK_PR_SECUEN lista_d_cte
   40            | %empty

   41 lista_d_var: lista_id TK_PR_DEFVAL TK_ID_OTHER TK_PR_SECUEN lista_d_var
   42            | lista_id TK_PR_DEFVAL d_tipo TK_PR_SECUEN lista_d_var
   43            | %empty

   44 lista_id: TK_ID_OTHER TK_PR_COMA lista_id
   45         | TK_ID_OTHER

   46 decl_ent_sal: decl_ent
   47             | decl_ent decl_sal
   48             | decl_sal

   49 decl_ent: TK_PR_ENT lista_d_var

   50 decl_sal: TK_PR_SAL lista_d_var

   51 expresion: exp_a
   52          | exp_b
   53          | funcion_ll

   54 exp_a: exp_a TK_PR_SUMA exp_a
   55      | exp_a TK_PR_RESTA exp_a
   56      | exp_a TK_PR_MULT exp_a
   57      | exp_a TK_PR_BARRA exp_a
   58      | exp_a TK_PR_MOD exp_a
   59      | exp_a TK_PR_DIV exp_a
   60      | TK_PR_ABRIRPAR exp_a TK_PR_CERRARPAR
   61      | operando_ari
   62      | TK_LIT_ENTERO
   63      | TK_PR_REAL
   64      | TK_PR_RESTA exp_a

   65 exp_b: exp_b TK_PR_Y exp_b
   66      | exp_b TK_PR_O exp_b
   67      | TK_PR_NO exp_b
   68      | operando_bool
   69      | TK_PR_VERDADERO
   70      | TK_PR_FALSO
   71      | expresion TK_PR_MAYOR expresion
   72      | expresion TK_PR_MENOR expresion
   73      | expresion TK_PR_MAYIGU expresion
   74      | expresion TK_PR_MENIGU expresion
   75      | expresion TK_PR_IGUAL expresion
   76      | expresion TK_PR_DIST expresion
   77      | TK_PR_ABRIRPAR exp_b TK_PR_CERRARPAR

   78 operando_ari: TK_ID_ARI
   79             | operando_ari TK_PR_PUNTO operando_ari
   80             | operando_ari TK_PR_INIARRA expresion TK_PR_FINARRA
   81             | operando_ari TK_PR_REF

   82 operando_bool: TK_ID_BOL
   83              | operando_bool TK_PR_PUNTO operando_bool
   84              | operando_bool TK_PR_INIARRA expresion TK_PR_FINARRA
   85              | operando_bool TK_PR_REF

   86 instrucciones: instruccion TK_PR_SECUEN instrucciones
   87              | instruccion

   88 instruccion: TK_PR_CONTINUAR
   89            | asignacion
   90            | alternativa
   91            | iteracion
   92            | accion_ll

   93 asignacion: operando_ari TK_PR_ASIG expresion
   94           | operando_bool TK_PR_ASIG expresion

   95 alternativa: TK_PR_SI expresion TK_PR_ENTONCES instrucciones lista_opciones TK_PR_FSI

   96 lista_opciones: TK_PR_ELSE expresion TK_PR_ENTONCES instrucciones lista_opciones
   97               | %empty

   98 iteracion: it_cota_fija
   99          | it_cota_exp

  100 it_cota_exp: TK_PR_MIENTRAS expresion TK_PR_HACER instrucciones TK_PR_FMIENTR

  101 it_cota_fija: TK_PR_PARA TK_ID_OTHER TK_PR_ASIG expresion TK_PR_HASTA expresion TK_PR_HACER instrucciones TK_PR_FPARA

  102 accion_d: TK_PR_ACCION a_cabecera bloque TK_PR_FACCIO

  103 funcion_d: TK_PR_FUNCION f_cabecera bloque TK_PR_DEV expresion TK_PR_FFUNCION

  104 a_cabecera: TK_ID_OTHER TK_PR_ABRIRPAR d_par_form TK_PR_CERRARPAR TK_PR_SECUEN

  105 f_cabecera: TK_ID_OTHER TK_PR_ABRIRPAR lista_d_var TK_PR_CERRARPAR TK_PR_DEV d_tipo TK_PR_SECUEN

  106 d_par_form: d_p_form TK_PR_SECUEN d_par_form
  107           | %empty

  108 d_p_form: TK_PR_ENTERO lista_id TK_PR_DEFVAL d_tipo
  109         | TK_PR_SAL lista_id TK_PR_DEFVAL d_tipo
  110         | TK_PR_INOUT lista_id TK_PR_DEFVAL d_tipo

  111 accion_ll: TK_ID_OTHER TK_PR_ABRIRPAR l_ll TK_PR_CERRARPAR

  112 funcion_ll: TK_ID_OTHER TK_PR_ABRIRPAR l_ll TK_PR_CERRARPAR

  113 l_ll: expresion TK_PR_COMA l_ll
  114     | expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TK_PR_CONTINUAR (258) 88
    TK_PR_DE (259)
    TK_PR_DEV (260) 103 105
    TK_PR_ENT (261) 49
    TK_PR_INOUT (262) 110
    TK_PR_HACER (263) 100 101
    TK_PR_HASTA (264) 101
    TK_PR_REF (265) 24 81 85
    TK_PR_SAL (266) 50 109
    TK_PR_VERDADERO (267) 69
    TK_PR_FALSO (268) 70
    TK_PR_FUNCION (269) 103
    TK_PR_FFUNCION (270) 103
    TK_PR_ACCION (271) 102
    TK_PR_FACCIO (272) 102
    TK_PR_ALGORIT (273) 1
    TK_PR_FALGORI (274) 1
    TK_PR_MIENTRAS (275) 100
    TK_PR_FMIENTR (276) 100
    TK_PR_PARA (277) 101
    TK_PR_FPARA (278) 101
    TK_PR_SI (279) 95
    TK_PR_FSI (280) 95
    TK_PR_TIPO (281) 15
    TK_PR_FTIPO (282) 15
    TK_PR_TUPLA (283) 20
    TK_PR_FTUPLA (284) 20
    TK_PR_VAR (285) 17
    TK_PR_FVAR (286) 17
    TK_PR_REAL (287) 28 63
    TK_PR_ENTERO (288) 25 108
    TK_PR_BOOL (289) 26
    TK_PR_CADENA (290) 29
    TK_PR_CHAR (291) 27
    TK_PR_CONST (292) 16
    TK_PR_FCONST (293) 16
    TK_PR_TABLA (294) 21
    TK_PR_ASIG (295) 93 94 101
    TK_PR_SECUEN (296) 1 15 16 17 18 32 34 35 36 37 38 39 41 42 86 104 105 106
    TK_PR_ELSE (297) 96
    TK_PR_INIARRA (298) 21 80 84
    TK_PR_FINARRA (299) 80 84
    TK_PR_ENTONCES (300) 95 96
    TK_PR_COMA (301) 44 113
    TK_PR_PUNTO (302) 1 79 83
    TK_PR_SUBRANGO (303) 21 23
    TK_PR_DEFVAL (304) 41 42 108 109 110
    TK_PR_BARRA (305) 57
    TK_PR_ABRIRPAR (306) 60 77 104 105 111 112
    TK_PR_CERRARPAR (307) 60 77 104 105 111 112
    TK_PR_ABRIRLLAVE (308)
    TK_PR_CERRARLLAVE (309)
    TK_PR_SUMA (310) 54
    TK_PR_MULT (311) 56
    TK_PR_RESTA (312) 55 64
    TK_PR_DIV (313) 59
    TK_PR_MOD (314) 58
    TK_PR_MAYOR (315) 71
    TK_PR_MENOR (316) 72
    TK_PR_MAYIGU (317) 73
    TK_PR_MENIGU (318) 74
    TK_PR_IGUAL (319) 18 32 34 35 36 37 38 39 75
    TK_PR_DIST (320) 76
    TK_PR_O (321) 66
    TK_PR_Y (322) 65
    TK_PR_NO (323) 67
    TK_LETRA (324)
    TK_CIFRA (325)
    TK_DELIM (326)
    TK_LETRA_O_CIFRA (327)
    TK_ID_OTHER (328) 1 18 22 32 34 35 36 37 38 39 41 44 45 101 104 105 111 112
    TK_ID_ARI (329) 78
    TK_ID_BOL (330) 82
    TK_LIT_ENTERO (331) 38 62
    TK_LIT_REAL (332) 39
    TK_LIT_BOOL (333) 34
    TK_LIT_CARAC (334) 31 36
    TK_LIT_CADE (335) 35
    TK_LIT_COMENTARIO (336) 2 3 37


No terminales con las reglas donde aparecen

    $accept (82)
        on left: 0
    desc_algoritmo (83)
        on left: 1
        on right: 0
    cabecera_alg (84)
        on left: 2
        on right: 1
    bloque_alg (85)
        on left: 3
        on right: 1
    decl_globales (86)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (87)
        on left: 7 8 9
        on right: 2 7 8
    bloque (88)
        on left: 10
        on right: 3 102 103
    declaraciones (89)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo (90)
        on left: 15
        on right: 4 11
    declaracion_cte (91)
        on left: 16
        on right: 5 12
    declaracion_var (92)
        on left: 17
        on right: 13
    lista_d_tipo (93)
        on left: 18 19
        on right: 15 18
    d_tipo (94)
        on left: 20 21 22 23 24 25 26 27 28 29
        on right: 18 24 32 42 105 108 109 110
    expresion_t (95)
        on left: 30 31
        on right: 21 23
    lista_campos (96)
        on left: 32 33
        on right: 20 32
    lista_d_cte (97)
        on left: 34 35 36 37 38 39 40
        on right: 16 34 35 36 37 38 39
    lista_d_var (98)
        on left: 41 42 43
        on right: 17 41 42 49 50 105
    lista_id (99)
        on left: 44 45
        on right: 41 42 44 108 109 110
    decl_ent_sal (100)
        on left: 46 47 48
        on right: 2
    decl_ent (101)
        on left: 49
        on right: 46 47
    decl_sal (102)
        on left: 50
        on right: 47 48
    expresion (103)
        on left: 51 52 53
        on right: 30 71 72 73 74 75 76 80 84 93 94 95 96 100 101 103 113 114
    exp_a (104)
        on left: 54 55 56 57 58 59 60 61 62 63 64
        on right: 51 54 55 56 57 58 59 60 64
    exp_b (105)
        on left: 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 52 65 66 67 77
    operando_ari (106)
        on left: 78 79 80 81
        on right: 61 79 80 81 93
    operando_bool (107)
        on left: 82 83 84 85
        on right: 68 83 84 85 94
    instrucciones (108)
        on left: 86 87
        on right: 10 86 95 96 100 101
    instruccion (109)
        on left: 88 89 90 91 92
        on right: 86 87
    asignacion (110)
        on left: 93 94
        on right: 89
    alternativa (111)
        on left: 95
        on right: 90
    lista_opciones (112)
        on left: 96 97
        on right: 95 96
    iteracion (113)
        on left: 98 99
        on right: 91
    it_cota_exp (114)
        on left: 100
        on right: 99
    it_cota_fija (115)
        on left: 101
        on right: 98
    accion_d (116)
        on left: 102
        on right: 7
    funcion_d (117)
        on left: 103
        on right: 8
    a_cabecera (118)
        on left: 104
        on right: 102
    f_cabecera (119)
        on left: 105
        on right: 103
    d_par_form (120)
        on left: 106 107
        on right: 104 106
    d_p_form (121)
        on left: 108 109 110
        on right: 106
    accion_ll (122)
        on left: 111
        on right: 92
    funcion_ll (123)
        on left: 112
        on right: 53
    l_ll (124)
        on left: 113 114
        on right: 111 112 113


Estado 0

    0 $accept: . desc_algoritmo $end

    TK_PR_ALGORIT  desplazar e ir al estado 1

    desc_algoritmo  ir al estado 2


Estado 1

    1 desc_algoritmo: TK_PR_ALGORIT . TK_ID_OTHER TK_PR_SECUEN cabecera_alg bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    TK_ID_OTHER  desplazar e ir al estado 3


Estado 2

    0 $accept: desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_OTHER . TK_PR_SECUEN cabecera_alg bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    TK_PR_SECUEN  desplazar e ir al estado 5


Estado 4

    0 $accept: desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_OTHER TK_PR_SECUEN . cabecera_alg bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    cabecera_alg      ir al estado 8
    decl_globales     ir al estado 9
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 6

   15 declaracion_tipo: TK_PR_TIPO . lista_d_tipo TK_PR_FTIPO TK_PR_SECUEN

    TK_ID_OTHER  desplazar e ir al estado 12

    $default  reduce usando la regla 19 (lista_d_tipo)

    lista_d_tipo  ir al estado 13


Estado 7

   16 declaracion_cte: TK_PR_CONST . lista_d_cte TK_PR_FCONST TK_PR_SECUEN

    TK_ID_OTHER  desplazar e ir al estado 14

    $default  reduce usando la regla 40 (lista_d_cte)

    lista_d_cte  ir al estado 15


Estado 8

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_OTHER TK_PR_SECUEN cabecera_alg . bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    bloque_alg        ir al estado 17
    bloque            ir al estado 18
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal TK_LIT_COMENTARIO

    TK_PR_FUNCION  desplazar e ir al estado 23
    TK_PR_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 25
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 10

    4 decl_globales: declaracion_tipo . decl_globales

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales     ir al estado 28
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 11

    5 decl_globales: declaracion_cte . decl_globales

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales     ir al estado 29
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 12

   18 lista_d_tipo: TK_ID_OTHER . TK_PR_IGUAL d_tipo TK_PR_SECUEN lista_d_tipo

    TK_PR_IGUAL  desplazar e ir al estado 30


Estado 13

   15 declaracion_tipo: TK_PR_TIPO lista_d_tipo . TK_PR_FTIPO TK_PR_SECUEN

    TK_PR_FTIPO  desplazar e ir al estado 31


Estado 14

   34 lista_d_cte: TK_ID_OTHER . TK_PR_IGUAL TK_LIT_BOOL TK_PR_SECUEN lista_d_cte
   35            | TK_ID_OTHER . TK_PR_IGUAL TK_LIT_CADE TK_PR_SECUEN lista_d_cte
   36            | TK_ID_OTHER . TK_PR_IGUAL TK_LIT_CARAC TK_PR_SECUEN lista_d_cte
   37            | TK_ID_OTHER . TK_PR_IGUAL TK_LIT_COMENTARIO TK_PR_SECUEN lista_d_cte
   38            | TK_ID_OTHER . TK_PR_IGUAL TK_LIT_ENTERO TK_PR_SECUEN lista_d_cte
   39            | TK_ID_OTHER . TK_PR_IGUAL TK_LIT_REAL TK_PR_SECUEN lista_d_cte

    TK_PR_IGUAL  desplazar e ir al estado 32


Estado 15

   16 declaracion_cte: TK_PR_CONST lista_d_cte . TK_PR_FCONST TK_PR_SECUEN

    TK_PR_FCONST  desplazar e ir al estado 33


Estado 16

   17 declaracion_var: TK_PR_VAR . lista_d_var TK_PR_FVAR TK_PR_SECUEN

    TK_ID_OTHER  desplazar e ir al estado 34

    $default  reduce usando la regla 43 (lista_d_var)

    lista_d_var  ir al estado 35
    lista_id     ir al estado 36


Estado 17

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_OTHER TK_PR_SECUEN cabecera_alg bloque_alg . TK_PR_FALGORI TK_PR_PUNTO

    TK_PR_FALGORI  desplazar e ir al estado 37


Estado 18

    3 bloque_alg: bloque . TK_LIT_COMENTARIO

    TK_LIT_COMENTARIO  desplazar e ir al estado 38


Estado 19

   10 bloque: declaraciones . instrucciones

    TK_PR_CONTINUAR  desplazar e ir al estado 39
    TK_PR_MIENTRAS   desplazar e ir al estado 40
    TK_PR_PARA       desplazar e ir al estado 41
    TK_PR_SI         desplazar e ir al estado 42
    TK_ID_OTHER      desplazar e ir al estado 43
    TK_ID_ARI        desplazar e ir al estado 44
    TK_ID_BOL        desplazar e ir al estado 45

    operando_ari   ir al estado 46
    operando_bool  ir al estado 47
    instrucciones  ir al estado 48
    instruccion    ir al estado 49
    asignacion     ir al estado 50
    alternativa    ir al estado 51
    iteracion      ir al estado 52
    it_cota_exp    ir al estado 53
    it_cota_fija   ir al estado 54
    accion_ll      ir al estado 55


Estado 20

   11 declaraciones: declaracion_tipo . declaraciones

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 56
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 21

   12 declaraciones: declaracion_cte . declaraciones

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 57
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 22

   13 declaraciones: declaracion_var . declaraciones

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 58
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 23

  103 funcion_d: TK_PR_FUNCION . f_cabecera bloque TK_PR_DEV expresion TK_PR_FFUNCION

    TK_ID_OTHER  desplazar e ir al estado 59

    f_cabecera  ir al estado 60


Estado 24

  102 accion_d: TK_PR_ACCION . a_cabecera bloque TK_PR_FACCIO

    TK_ID_OTHER  desplazar e ir al estado 61

    a_cabecera  ir al estado 62


Estado 25

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal TK_LIT_COMENTARIO

    TK_PR_ENT  desplazar e ir al estado 63
    TK_PR_SAL  desplazar e ir al estado 64

    decl_ent_sal  ir al estado 65
    decl_ent      ir al estado 66
    decl_sal      ir al estado 67


Estado 26

    7 decl_a_f: accion_d . decl_a_f

    TK_PR_FUNCION  desplazar e ir al estado 23
    TK_PR_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 68
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 27

    8 decl_a_f: funcion_d . decl_a_f

    TK_PR_FUNCION  desplazar e ir al estado 23
    TK_PR_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 69
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 28

    4 decl_globales: declaracion_tipo decl_globales .

    $default  reduce usando la regla 4 (decl_globales)


Estado 29

    5 decl_globales: declaracion_cte decl_globales .

    $default  reduce usando la regla 5 (decl_globales)


Estado 30

   18 lista_d_tipo: TK_ID_OTHER TK_PR_IGUAL . d_tipo TK_PR_SECUEN lista_d_tipo

    TK_PR_REF        desplazar e ir al estado 70
    TK_PR_VERDADERO  desplazar e ir al estado 71
    TK_PR_FALSO      desplazar e ir al estado 72
    TK_PR_TUPLA      desplazar e ir al estado 73
    TK_PR_REAL       desplazar e ir al estado 74
    TK_PR_ENTERO     desplazar e ir al estado 75
    TK_PR_BOOL       desplazar e ir al estado 76
    TK_PR_CADENA     desplazar e ir al estado 77
    TK_PR_CHAR       desplazar e ir al estado 78
    TK_PR_TABLA      desplazar e ir al estado 79
    TK_PR_ABRIRPAR   desplazar e ir al estado 80
    TK_PR_RESTA      desplazar e ir al estado 81
    TK_PR_NO         desplazar e ir al estado 82
    TK_ID_OTHER      desplazar e ir al estado 83
    TK_ID_ARI        desplazar e ir al estado 44
    TK_ID_BOL        desplazar e ir al estado 45
    TK_LIT_ENTERO    desplazar e ir al estado 84
    TK_LIT_CARAC     desplazar e ir al estado 85

    d_tipo         ir al estado 86
    expresion_t    ir al estado 87
    expresion      ir al estado 88
    exp_a          ir al estado 89
    exp_b          ir al estado 90
    operando_ari   ir al estado 91
    operando_bool  ir al estado 92
    funcion_ll     ir al estado 93


Estado 31

   15 declaracion_tipo: TK_PR_TIPO lista_d_tipo TK_PR_FTIPO . TK_PR_SECUEN

    TK_PR_SECUEN  desplazar e ir al estado 94


Estado 32

   34 lista_d_cte: TK_ID_OTHER TK_PR_IGUAL . TK_LIT_BOOL TK_PR_SECUEN lista_d_cte
   35            | TK_ID_OTHER TK_PR_IGUAL . TK_LIT_CADE TK_PR_SECUEN lista_d_cte
   36            | TK_ID_OTHER TK_PR_IGUAL . TK_LIT_CARAC TK_PR_SECUEN lista_d_cte
   37            | TK_ID_OTHER TK_PR_IGUAL . TK_LIT_COMENTARIO TK_PR_SECUEN lista_d_cte
   38            | TK_ID_OTHER TK_PR_IGUAL . TK_LIT_ENTERO TK_PR_SECUEN lista_d_cte
   39            | TK_ID_OTHER TK_PR_IGUAL . TK_LIT_REAL TK_PR_SECUEN lista_d_cte

    TK_LIT_ENTERO      desplazar e ir al estado 95
    TK_LIT_REAL        desplazar e ir al estado 96
    TK_LIT_BOOL        desplazar e ir al estado 97
    TK_LIT_CARAC       desplazar e ir al estado 98
    TK_LIT_CADE        desplazar e ir al estado 99
    TK_LIT_COMENTARIO  desplazar e ir al estado 100


Estado 33

   16 declaracion_cte: TK_PR_CONST lista_d_cte TK_PR_FCONST . TK_PR_SECUEN

    TK_PR_SECUEN  desplazar e ir al estado 101


Estado 34

   44 lista_id: TK_ID_OTHER . TK_PR_COMA lista_id
   45         | TK_ID_OTHER .

    TK_PR_COMA  desplazar e ir al estado 102

    $default  reduce usando la regla 45 (lista_id)


Estado 35

   17 declaracion_var: TK_PR_VAR lista_d_var . TK_PR_FVAR TK_PR_SECUEN

    TK_PR_FVAR  desplazar e ir al estado 103


Estado 36

   41 lista_d_var: lista_id . TK_PR_DEFVAL TK_ID_OTHER TK_PR_SECUEN lista_d_var
   42            | lista_id . TK_PR_DEFVAL d_tipo TK_PR_SECUEN lista_d_var

    TK_PR_DEFVAL  desplazar e ir al estado 104


Estado 37

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_OTHER TK_PR_SECUEN cabecera_alg bloque_alg TK_PR_FALGORI . TK_PR_PUNTO

    TK_PR_PUNTO  desplazar e ir al estado 105


Estado 38

    3 bloque_alg: bloque TK_LIT_COMENTARIO .

    $default  reduce usando la regla 3 (bloque_alg)


Estado 39

   88 instruccion: TK_PR_CONTINUAR .

    $default  reduce usando la regla 88 (instruccion)


Estado 40

  100 it_cota_exp: TK_PR_MIENTRAS . expresion TK_PR_HACER instrucciones TK_PR_FMIENTR

    TK_PR_VERDADERO  desplazar e ir al estado 71
    TK_PR_FALSO      desplazar e ir al estado 72
    TK_PR_REAL       desplazar e ir al estado 106
    TK_PR_ABRIRPAR   desplazar e ir al estado 80
    TK_PR_RESTA      desplazar e ir al estado 81
    TK_PR_NO         desplazar e ir al estado 82
    TK_ID_OTHER      desplazar e ir al estado 107
    TK_ID_ARI        desplazar e ir al estado 44
    TK_ID_BOL        desplazar e ir al estado 45
    TK_LIT_ENTERO    desplazar e ir al estado 84

    expresion      ir al estado 108
    exp_a          ir al estado 89
    exp_b          ir al estado 90
    operando_ari   ir al estado 91
    operando_bool  ir al estado 92
    funcion_ll     ir al estado 93


Estado 41

  101 it_cota_fija: TK_PR_PARA . TK_ID_OTHER TK_PR_ASIG expresion TK_PR_HASTA expresion TK_PR_HACER instrucciones TK_PR_FPARA

    TK_ID_OTHER  desplazar e ir al estado 109


Estado 42

   95 alternativa: TK_PR_SI . expresion TK_PR_ENTONCES instrucciones lista_opciones TK_PR_FSI

    TK_PR_VERDADERO  desplazar e ir al estado 71
    TK_PR_FALSO      desplazar e ir al estado 72
    TK_PR_REAL       desplazar e ir al estado 106
    TK_PR_ABRIRPAR   desplazar e ir al estado 80
    TK_PR_RESTA      desplazar e ir al estado 81
    TK_PR_NO         desplazar e ir al estado 82
    TK_ID_OTHER      desplazar e ir al estado 107
    TK_ID_ARI        desplazar e ir al estado 44
    TK_ID_BOL        desplazar e ir al estado 45
    TK_LIT_ENTERO    desplazar e ir al estado 84

    expresion      ir al estado 110
    exp_a          ir al estado 89
    exp_b          ir al estado 90
    operando_ari   ir al estado 91
    operando_bool  ir al estado 92
    funcion_ll     ir al estado 93


Estado 43

  111 accion_ll: TK_ID_OTHER . TK_PR_ABRIRPAR l_ll TK_PR_CERRARPAR

    TK_PR_ABRIRPAR  desplazar e ir al estado 111


Estado 44

   78 operando_ari: TK_ID_ARI .

    $default  reduce usando la regla 78 (operando_ari)


Estado 45

   82 operando_bool: TK_ID_BOL .

    $default  reduce usando la regla 82 (operando_bool)


Estado 46

   79 operando_ari: operando_ari . TK_PR_PUNTO operando_ari
   80             | operando_ari . TK_PR_INIARRA expresion TK_PR_FINARRA
   81             | operando_ari . TK_PR_REF
   93 asignacion: operando_ari . TK_PR_ASIG expresion

    TK_PR_REF      desplazar e ir al estado 112
    TK_PR_ASIG     desplazar e ir al estado 113
    TK_PR_INIARRA  desplazar e ir al estado 114
    TK_PR_PUNTO    desplazar e ir al estado 115


Estado 47

   83 operando_bool: operando_bool . TK_PR_PUNTO operando_bool
   84              | operando_bool . TK_PR_INIARRA expresion TK_PR_FINARRA
   85              | operando_bool . TK_PR_REF
   94 asignacion: operando_bool . TK_PR_ASIG expresion

    TK_PR_REF      desplazar e ir al estado 116
    TK_PR_ASIG     desplazar e ir al estado 117
    TK_PR_INIARRA  desplazar e ir al estado 118
    TK_PR_PUNTO    desplazar e ir al estado 119


Estado 48

   10 bloque: declaraciones instrucciones .

    $default  reduce usando la regla 10 (bloque)


Estado 49

   86 instrucciones: instruccion . TK_PR_SECUEN instrucciones
   87              | instruccion .

    TK_PR_SECUEN  desplazar e ir al estado 120

    $default  reduce usando la regla 87 (instrucciones)


Estado 50

   89 instruccion: asignacion .

    $default  reduce usando la regla 89 (instruccion)


Estado 51

   90 instruccion: alternativa .

    $default  reduce usando la regla 90 (instruccion)


Estado 52

   91 instruccion: iteracion .

    $default  reduce usando la regla 91 (instruccion)


Estado 53

   99 iteracion: it_cota_exp .

    $default  reduce usando la regla 99 (iteracion)


Estado 54

   98 iteracion: it_cota_fija .

    $default  reduce usando la regla 98 (iteracion)


Estado 55

   92 instruccion: accion_ll .

    $default  reduce usando la regla 92 (instruccion)


Estado 56

   11 declaraciones: declaracion_tipo declaraciones .

    $default  reduce usando la regla 11 (declaraciones)


Estado 57

   12 declaraciones: declaracion_cte declaraciones .

    $default  reduce usando la regla 12 (declaraciones)


Estado 58

   13 declaraciones: declaracion_var declaraciones .
